# SFA

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  __init__.py  pysfa.py
.ipynb_checkpoints/: sfa-checkpoint.py
include/: pysfa.h  sfa.h  utils.h
include/propag/: harmonic_pysfa.h
src/: harmonic_pysfa.cpp  pysfa.cpp  sfa.cpp  utils.cpp
